solutions/18_deployment-strategies/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  namespace: mariusbu
spec:
  ingressClassName: nginx
  rules:
    - host: rollingupdates.k8s.usu.trygoo.gl
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: demo-app
                port:
                  name: web
